<resources>
    <string name="app_name">Trading Gyan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Referal Code</string>
    <string name="menu_slideshow">Disclaimer</string>
    <string name="menu_trading">Trading</string>
    <string name="menu_raiseaticket">Raise a Ticket</string>
    <string name="menu_contact">Contact on Call</string>
    <string name="knowledge_center">Knowledge Center</string>
    <string name="notification_center">Notification Center</string>
    <string name="my_profile">My Profile</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="logout">Logout</string>
    <string name="community">Community</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="home_second">Home Second</string>
    <string name="ask_your_friends_to_signup_with_your_referal_code_make_an_initial_payment"><![CDATA[Ask your friends to signup with your referal code & make an initial payment]]></string>
    <string name="refer_friends_and_earn">Refer Friends and Earn</string>
    <string name="use_this_referal_code">Use this Referal Code</string>
    <string name="invite_friends">Invite Friends</string>

    <string name="s_pref_file">trade.sh_preference_file</string>
    <string name="s_pref_login_status">trade.sh_preference_login_status</string>
    <string name="s_pref_name">sh_preference_name</string>
    <string name="s_pref_email">sh_preference_email</string>
    <string name="s_pref_date">sh_preference_date</string>
</resources>
