<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tradinggyanexample.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.tradinggyanexample.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tradinggyanexample.ui.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tradinggyanexample.ui.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_trading"
        android:name="com.example.tradinggyanexample.ui.TradingFragment"
        android:label="@string/menu_trading"
        tools:layout="@layout/trading_fragment" />
    <fragment
        android:id="@+id/nav_raiseaticket"
        android:name="com.example.tradinggyanexample.ui.RaiseaticketFragment"
        android:label="@string/menu_raiseaticket"
        tools:layout="@layout/raiseaticket_fragment" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.tradinggyanexample.ui.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/contact_fragment" />

    <fragment
        android:id="@+id/nav_knowledge"
        android:name="com.example.tradinggyanexample.ui.knowledgecenter.KnowledgeFragment"
        android:label="@string/knowledge_center"
        tools:layout="@layout/knowledge_fragment" />


    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.tradinggyanexample.ui.notification.NotificationFragment"
        android:label="@string/notification_center"
        tools:layout="@layout/notification_fragment" />

    <fragment
        android:id="@+id/nav_myprofile"
        android:name="com.example.tradinggyanexample.ui.myprofile.MyProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/my_profile_fragment" />

    <fragment
        android:id="@+id/nav_disclaimer"
        android:name="com.example.tradinggyanexample.ui.disclaimer.DisclaimerFragment"
        android:label="@string/disclaimer"
        tools:layout="@layout/disclaimer_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.tradinggyanexample.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/logout_fragment" />

</navigation>